--- a/.github/workflows/build-static.yml
+++ b/.github/workflows/build-static.yml
@@ -20,4 +20,6 @@ jobs:
 
       - name: Deploy or publish site
         run: echo "Deploy step here"
+      - name: Test secret access
+        run: echo "Secret is ${{ secrets.API_ID }}"
 
