--- a/.github/workflows/inject-api.yml
+++ b/.github/workflows/inject-api.yml
@@ -2,8 +2,8 @@ name: Inject API Secret into HTML
 
 on:
   push:
-    branches: [ main ]  # Trigger on push to main; change if needed (e.g., add 'pull_request')
-  workflow_dispatch:  # Allows manual trigger from GitHub UI
+    branches: [ main ]  # Trigger on push to main; change if needed
+  workflow_dispatch:  # Allows manual trigger
 
 jobs:
   inject:
@@ -12,13 +12,27 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        ref: main  # Ensure it checks out the correct branch
+
+    - name: List files in repo (debug)
+      run: |
+        echo "Current directory structure:"
+        find . -type f | head -20  # Lists top 20 files/folders for debugging
+        echo "Checking for target file:"
+        ls -la tools/testing/ || echo "Directory tools/testing/ not found!"
 
     - name: Replace placeholder with secret
       env:
         API_ID: ${{ secrets.API_ID }}
       run: |
+        if [ ! -f "tools/testing/index.html" ]; then
+          echo "Error: File tools/testing/index.html does not exist!"
+          exit 1
+        fi
         sed -i "s|{{API_ID}}|$API_ID|g" tools/testing/index.html
-        # Verify the change (optional: echo the first few lines)
+        # Verify the change
+        echo "Updated file preview:"
         head -n 20 tools/testing/index.html
 
     - name: Commit and push updated file
