--- a/.github/workflows/inject-api.yml
+++ b/.github/workflows/inject-api.yml
@@ -1,4 +1,4 @@
-name: Inject API Variable into HTML
+name: Inject API Variable into HTML and JS
 
 on:
   push:
@@ -24,25 +24,25 @@ jobs:
         echo "Current directory structure:"
         find . -type f | head -20  # Lists top 20 files/folders for debugging
         echo "Checking for target file:"
-        ls -la testing/ || echo "Directory testing/ not found!"
+        ls -la recipes/ || echo "Directory recipes/ not found!"
 
     - name: Replace placeholder with variable
       env:
-        API_ID: ${{ vars.API_ID }}  # Reference variable here (not secrets)
+        API_ID: ${{ vars.API_ID }}  # Reference variable here
       run: |
-        if [ ! -f "testing/index.html" ]; then
-          echo "Error: File testing/index.html does not exist!"
+        if [ ! -f "recipes/script.js" ]; then
+          echo "Error: File recipes/script.js does not exist!"
           exit 1
         fi
-        # Use envsubst for safe variable substitution (handles special chars)
+        # Use envsubst for safe variable substitution
         export API_ID
-        envsubst < testing/index.html > testing/index.html.tmp
-        mv testing/index.html.tmp testing/index.html
+        envsubst < recipes/script.js > recipes/script.js.tmp
+        mv recipes/script.js.tmp recipes/script.js
         # Verify the change
         echo "Updated file preview:"
-        head -n 20 testing/index.html
+        head -n 20 recipes/script.js
         # Debug: Check if placeholder was replaced
-        if grep -q '\${API_ID}' testing/index.html; then
+        if grep -q '\${API_ID}' recipes/script.js; then
           echo "Warning: Placeholder still present!"
         else
           echo "Success: Variable injected (length: ${#API_ID})."
@@ -51,7 +51,7 @@ jobs:
     - name: Commit and push updated file
       uses: stefanzweifel/git-auto-commit-action@v5
       with:
-        commit_message: "Inject API ID variable into index.html"
-        file_pattern: testing/index.html
+        commit_message: "Inject API ID variable into script.js"
+        file_pattern: recipes/script.js
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
